--- a/index.html
+++ b/index.html
@@ -164,7 +164,12 @@
       </div>
     </div>
   </section>
-        <h2>Conhecimentos</h2>
+     
+  <section id="projects">
+    <div class="wrapper"></div>
+  </section>
+  
+  <h2>Conhecimentos</h2>
       </header>
       <div class="content">
         <div class="cards">
