--- a/index.html
+++ b/index.html
@@ -160,15 +160,13 @@
 
       <div class="col-b">
         <img src="./assets/images/caio.jpeg"
-          alt="Imagem de Lucyan vestindo camisa social branca e sorrindo com plantas no fundo" />
+          alt="Imagem" />
       </div>
     </div>
   </section>
      
-  <section id="projects">
-    <div class="wrapper"></div>
-  </section>
   
+    <div class="wrapper"></div>
   <h2>Conhecimentos</h2>
       </header>
       <div class="content">
