--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
      
   
     <div class="wrapper"></div>
+  <font color="white">Este texto está Branco 
   <h2>Conhecimentos</h2>
       </header>
       <div class="content">
@@ -212,7 +213,7 @@
       </div>
     </div>
   </section>
-
+</font>
   <section id="contact">
     <div class="wrapper">
       <div class="col-a">
