--- a/index.html
+++ b/index.html
@@ -4,78 +4,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="description" content="Portfólio de Caio Amorim - Especialista em Cibersegurança" />
-  <meta name="author" content="Caio Amorim" />
-  <meta name="robots" content="index" />
-
+  <meta name="description" content="Portfólio Caio Amorim - Cibersegurança" />
   <title>Caio Amorim // Cibersegurança</title>
 
-  <link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <nav>
-      <h1>Caio Amorim</h1>
-      <ul>
-        <li><a href="#about">Sobre</a></li>
-        <li><a href="#services">Serviços</a></li>
-        <li><a href="#portfolio">Portfólio</a></li>
-        <li><a href="#contact">Contato</a></li>
-      </ul>
-    </nav>
+  <nav class="navbar">
+    <div class="logo">caioamorim</div>
+    <ul class="menu">
+      <li><a href="#about">Sobre</a></li>
+      <li><a href="#services">Serviços</a></li>
+      <li><a href="#portfolio">Portfólio</a></li>
+      <li><a href="#contact">Contato</a></li>
+    </ul>
+  </nav>
+
+  <header class="hero">
+    <h1>Caio Amorim</h1>
+    <p class="typing-hacker">Especialista em Cibersegurança</p>
+    <a class="button" href="#contact">Fale comigo</a>
   </header>
 
-  <section id="home">
-    <div class="container">
-      <h2>Especialista em Cibersegurança</h2>
-      <p>Protegendo sistemas, dados e pessoas com conhecimento técnico e estratégico.</p>
-      <a href="#contact" class="btn">Entre em contato</a>
-    </div>
-  </section>
-
   <section id="about">
-    <div class="container">
-      <h2>Sobre mim</h2>
-      <p>Sou Caio Amorim, profissional de Tecnologia com foco em Cibersegurança. Tenho experiência com suporte técnico, desenvolvimento com Java, JavaScript e conhecimento intermediário em Linux. Estou em transição para a segurança da informação, com foco em ataques como XSS, análise de vulnerabilidades e ferramentas como EyeWitness e theHarvester.</p>
-    </div>
+    <h2>Sobre Mim</h2>
+    <p>Sou estudante de Ciência da Computação com foco em Cibersegurança, atuando em análise de vulnerabilidades, testes de intrusão e automação de exploits. Tenho experiência com Java, JavaScript, Linux e ambientes ofensivos.</p>
   </section>
 
   <section id="services">
-    <div class="container">
-      <h2>Serviços</h2>
-      <ul class="services">
-        <li>Teste de Invasão (Pentest)</li>
-        <li>Análise de Vulnerabilidades em Aplicativos Web</li>
-        <li>Monitoramento e Resposta a Incidentes</li>
-        <li>Treinamento em Segurança para Equipes</li>
-      </ul>
-    </div>
+    <h2>Serviços</h2>
+    <ul>
+      <li>Teste de Invasão (Pentest)</li>
+      <li>Análise de Vulnerabilidades Web</li>
+      <li>Auditorias em WordPress</li>
+      <li>Engenharia Social & Phishing Controlado</li>
+    </ul>
   </section>
 
   <section id="portfolio">
-    <div class="container">
-      <h2>Portfólio</h2>
-      <p>Veja meus projetos de cibersegurança, automações e ferramentas personalizadas para análise de vulnerabilidades.</p>
-      <!-- Adicionar cards de projetos aqui -->
-    </div>
+    <h2>Portfólio</h2>
+    <p>Projetos de automação de exploits, enumeração com ferramentas como <code>theHarvester</code> e <code>EyeWitness</code>. Ambiente voltado para pentest em laboratórios reais.</p>
   </section>
 
   <section id="contact">
-    <div class="container">
-      <h2>Contato</h2>
-      <p>Email: <a href="mailto:caiolucasamorim@gmail.com">caiolucasamorim@gmail.com</a></p>
-      <p>WhatsApp: <a href="https://wa.me/5531984818627" target="_blank">+55 31 98481-8627</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/caio-lucas-amoorim" target="_blank">/caio-lucas-amoorim</a></p>
-    </div>
+    <h2>Contato</h2>
+    <p>Email: <a href="mailto:caiolucasamorim@gmail.com">caiolucasamorim@gmail.com</a></p>
+    <p>WhatsApp: <a href="https://wa.me/5531984818627" target="_blank">+55 31 98481-8627</a></p>
+    <p>GitHub: <a href="https://github.com/caio1020ee" target="_blank">caio1020ee</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/caio-lucas-amoorim" target="_blank">Caio Amorim</a></p>
   </section>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 Caio Amorim - Todos os direitos reservados.</p>
-    </div>
+    <p>&copy; 2024 Caio Amorim - Todos os direitos reservados</p>
   </footer>
 </body>
 
