--- a/index.html
+++ b/index.html
@@ -1,66 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Caio Amorim - Portfólio</title>
+    <link rel="stylesheet" href="./assets/styles/style.css" />
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script type="module" src="./assets/scripts/main.js" defer></script>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="#" id="link-sobre">Sobre</a></li>
+        <li><a href="#" id="link-projetos">Projetos</a></li>
+        <li><a href="#" id="link-desafios">Desafios</a></li>
+      </ul>
+    </nav>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfólio Caio Amorim - Cibersegurança" />
-  <title>Caio Amorim // Cibersegurança</title>
+    <main>
+      <section id="conteudo">
+        <!-- Conteúdo dinâmico é injetado aqui via JS -->
+      </section>
+    </main>
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <nav class="navbar">
-    <div class="logo">caioamorim</div>
-    <ul class="menu">
-      <li><a href="#about">Sobre</a></li>
-      <li><a href="#services">Serviços</a></li>
-      <li><a href="#portfolio">Portfólio</a></li>
-      <li><a href="#contact">Contato</a></li>
-    </ul>
-  </nav>
-
-  <header class="hero">
-    <h1>Caio Amorim</h1>
-    <p class="typing-hacker">Especialista em Cibersegurança</p>
-    <a class="button" href="#contact">Fale comigo</a>
-  </header>
-
-  <section id="about">
-    <h2>Sobre Mim</h2>
-    <p>Sou estudante de Ciência da Computação com foco em Cibersegurança, atuando em análise de vulnerabilidades, testes de intrusão e automação de exploits. Tenho experiência com Java, JavaScript, Linux e ambientes ofensivos.</p>
-  </section>
-
-  <section id="services">
-    <h2>Serviços</h2>
-    <ul>
-      <li>Teste de Invasão (Pentest)</li>
-      <li>Análise de Vulnerabilidades Web</li>
-      <li>Auditorias em WordPress</li>
-      <li>Engenharia Social & Phishing Controlado</li>
-    </ul>
-  </section>
-
-  <section id="portfolio">
-    <h2>Portfólio</h2>
-    <p>Projetos de automação de exploits, enumeração com ferramentas como <code>theHarvester</code> e <code>EyeWitness</code>. Ambiente voltado para pentest em laboratórios reais.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contato</h2>
-    <p>Email: <a href="mailto:caiolucasamorim@gmail.com">caiolucasamorim@gmail.com</a></p>
-    <p>WhatsApp: <a href="https://wa.me/5531984818627" target="_blank">+55 31 98481-8627</a></p>
-    <p>GitHub: <a href="https://github.com/caio1020ee" target="_blank">caio1020ee</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/caio-lucas-amoorim" target="_blank">Caio Amorim</a></p>
-  </section>
-
-  <footer>
-    <p>&copy; 2024 Caio Amorim - Todos os direitos reservados</p>
-  </footer>
-</body>
-
+    <footer>
+      <p>&copy; 2025 Caio Amorim. Todos os direitos reservados.</p>
+    </footer>
+  </body>
 </html>
