--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
       <div class="wrapper menu">
         <span class="logo">Caio Amorim</span>
         <ul>
-          <li><a href="#" id="link-projetos">Projetos</a></li>
-          <li><a href="#" id="link-desafios">Desafios</a></li>
+          <li><a href="#projects" id="link-projetos">Projetos</a></li>
+          <li><a href="#projects" id="link-desafios">Desafios</a></li>
         </ul>
       </div>
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="wrapper">
+    <section id="home" class="wrapper hero-center">
       <div>
+        <div class="icon-terminal">💻</div>
         <h1>Olá, eu sou o Caio Amorim</h1>
         <p>Estudante de Ciência da Computação apaixonado por tecnologia e cibersegurança.</p>
-        <a href="#projetos" class="button">Ver Projetos</a>
+        <a href="#projects" class="button">Ver Projetos</a>
       </div>
-      <img src="./assets/images/caio.jpeg" alt="Foto de Caio Amorim" />
     </section>
 
-    <!-- Seção Dinâmica -->
+    <!-- Conteúdo dinâmico -->
     <main>
-      <section id="conteudo" class="wrapper">
-        <!-- Conteúdo injetado dinamicamente via JS -->
+      <section id="projects" class="wrapper">
+        <!-- Projetos e desafios serão injetados aqui -->
       </section>
     </main>
 
